--- a/.github/workflows/PublishProdDockerImage.yml
+++ b/.github/workflows/PublishProdDockerImage.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: my-docker-hub-namespace/my-docker-hub-repository
+          repository: chseki/grades-api
           tag_with_ref: true
