--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,6 @@ services:
     environment:
       POSTGRES_DB: grades-api
       POSTGRES_PASSWORD: admin
-  grades-scripts:
-    build:
-      context: ./scripts
-      dockerfile: Dockerfile
-    image: grades-scripts
-    command: -seed -delay=30
-    environment:
-      POSTGRES_URL: postgres://postgres:admin@grades-pg:5432/grades-api?sslmode=disable
-    depends_on:
-      - grades-pg
   grades-api:
     build:
       context: ./
@@ -30,5 +20,7 @@ services:
       DB_DATABASE: grades-api
       DB_HOST: grades-pg
       DB_PORT: 5432
+      POSTGRES_URL: postgres://postgres:admin@grades-pg:5432/grades-api?sslmode=disable
+      APP_DIR: /app/
     depends_on:
       - grades-pg     
